Section 9 custom plan card alignment fixing.

--- a/public/home.css
+++ b/public/home.css
@@ -951,7 +951,7 @@
 
   /* CTA style */
   .cta {
-    margin: 5vh 3vw 0 0;
+    margin: 5vh 0 0 0;
     float: right;
     background-color: #e6efff;
     padding: 20px;
